[tool]
[tool.poetry]
name = "munievents"
version = "0.1.0"
description = ""
authors = ["Magdalena Surowka <magdalena.surowka@zazuko.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
dash = "==1.*,>=1.18.1"
dash-cytoscape = "==0.*,>=0.2.0"
dash-html-components = "==1.*,>=1.1.1"
networkx = "==2.*,>=2.5.0"
pandas = "==1.*,>=1.2.0"
requests = "==2.*,>=2.25.1"

[tool.poetry.scripts]
munievents = "munievents.main:app.run_server"

[tool.poetry.dev-dependencies]
black = "==20.*,>=20.8.0.b1"
dephell = "==0.*,>=0.8.3"
